# dioxus-bug-memory-heap

./: Cargo.toml
src/: main.rs
