[package]
name = "dioxus-bug-memory-heap"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.17.0", features = ["sync", "rt-multi-thread", "time", "macros"] }
dioxus-native-core-macro = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus = { git = "https://github.com/DioxusLabs/dioxus"}
dioxus-rsx = { git = "https://github.com/DioxusLabs/dioxus"}
dioxus-native-core = { git = "https://github.com/DioxusLabs/dioxus"}
dioxus-core-macro = { git = "https://github.com/DioxusLabs/dioxus"}
dioxus-hooks = { git = "https://github.com/DioxusLabs/dioxus"}
dioxus-core = { git = "https://github.com/DioxusLabs/dioxus" }
gl = "*"
glutin_tao = { version = "0.30.1", features = ["serde"]}
skia-safe = { version = "0.56.1", features = ["gl", "textlayout", "svg"] }